[gd_scene load_steps=19 format=3 uid="uid://c70vnh71bo84q"]

[ext_resource type="Script" path="res://scripts/levels/level_2.gd" id="1_exeg0"]
[ext_resource type="PackedScene" uid="uid://dfnxd3n61qqu4" path="res://scenes/player.tscn" id="1_w6558"]
[ext_resource type="PackedScene" uid="uid://cy13q31hqrg0k" path="res://scenes/inventory.tscn" id="3_gobe2"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="4_b6yl6"]
[ext_resource type="PackedScene" uid="uid://b8jlbfk4o1u82" path="res://levels/level_3.tscn" id="6_28h6q"]
[ext_resource type="Resource" uid="uid://bdtnpy86w2dje" path="res://dialogues/level_2_intro.tres" id="6_lg2fn"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="6_pl6jt"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="7_fdu5j"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="8_7gx4m"]
[ext_resource type="AudioStream" uid="uid://bin1ei6yesmjv" path="res://assets/sound/voice.ogg" id="9_xpx3l"]
[ext_resource type="PackedScene" uid="uid://0so8ci8tx26a" path="res://ui/cooldown.tscn" id="26_ralgw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ltdls"]
light_mode = 1

[sub_resource type="Theme" id="Theme_otajq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ojae2"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rw2ra"]
light_mode = 1

[sub_resource type="RichTextEffect" id="RichTextEffect_c6wh6"]
script = ExtResource("6_pl6jt")

[sub_resource type="RichTextEffect" id="RichTextEffect_pyhwf"]
script = ExtResource("7_fdu5j")

[sub_resource type="RichTextEffect" id="RichTextEffect_fu5un"]
script = ExtResource("8_7gx4m")

[node name="Level2" type="Node2D"]
script = ExtResource("1_exeg0")

[node name="player" parent="." groups=["Player"] instance=ExtResource("1_w6558")]
unique_name_in_owner = true
process_mode = 1
z_index = 50
position = Vector2(-121, -24)
collision_layer = 3
collision_mask = 3

[node name="CooldownWater" parent="player" instance=ExtResource("26_ralgw")]
visible = false
position = Vector2(-312, -134)
cooldown = 5
type = 1

[node name="HealthBar" type="ProgressBar" parent="player"]
visible = false
z_index = 50
material = SubResource("CanvasItemMaterial_ltdls")
offset_left = -322.0
offset_top = -168.0
offset_right = -200.0
offset_bottom = -145.0
theme = SubResource("Theme_otajq")
step = 10.0
value = 100.0
show_percentage = false

[node name="Inventory" parent="player" instance=ExtResource("3_gobe2")]
unique_name_in_owner = true
visible = false
z_index = 50
material = SubResource("CanvasItemMaterial_ojae2")
position = Vector2(-46, -34)
scale = Vector2(1, 0.994014)

[node name="camera" type="Camera2D" parent="player"]
position = Vector2(-9.00002, 6)
scale = Vector2(1, 0.98823)
position_smoothing_speed = 20.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xpx3l")

[node name="environment" parent="." instance=ExtResource("6_28h6q")]

[node name="DialogueBox" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 200
material = SubResource("CanvasItemMaterial_rw2ra")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -441.0
offset_top = -192.0
offset_right = 182.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_b6yl6")
data = ExtResource("6_lg2fn")
start_id = "START"
hide_portrait = true
sample_portrait = null
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_c6wh6"), SubResource("RichTextEffect_pyhwf"), SubResource("RichTextEffect_fu5un")])
max_options_count = 1

[node name="timers" type="Node" parent="."]

[node name="DamageTimer" type="Timer" parent="timers"]
wait_time = 0.5

[node name="PowerupTimer" type="Timer" parent="timers"]
one_shot = true

[connection signal="cooldown_end" from="player/CooldownWater" to="player" method="_on_cooldown_end"]
[connection signal="dialogue_ended" from="DialogueBox" to="player" method="_on_dialogue_box_dialogue_ended"]
[connection signal="dialogue_started" from="DialogueBox" to="player" method="_on_dialogue_box_dialogue_started"]
[connection signal="timeout" from="timers/DamageTimer" to="." method="_damage_player"]
[connection signal="timeout" from="timers/PowerupTimer" to="player" method="_on_powerup_end"]
